--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.3.1",
     "lucide-react": "^0.441.0",
     "next": "^15.0.1",
     "next-auth": "^4.24.10",
