--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Auth
 NEXT_AUTH_SECRET=bhjvb12486y8dsv@3n
+NEXT_PUBLIC_LOGIN=http://127.0.0.1:8000/api/login
 
 # Storage
 NEXT_PUBLIC_API_STORAGE=http://127.0.0.1:8000/storage
