--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # Auth
 NEXT_AUTH_SECRET=bhjvb12486y8dsv@3n
-NEXT_PUBLIC_LOGIN=http://127.0.0.1:8000/api/login
+NEXT_PUBLIC_API_LOGIN=http://127.0.0.1:8000/api/login
+NEXT_PUBLIC_API_REGISTER=http://127.0.0.1:8000/api/register
 
 # Storage
 NEXT_PUBLIC_API_STORAGE=http://127.0.0.1:8000/storage
