Update environment variables for production API endpoints

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # Auth
 NEXT_AUTH_SECRET=bhjvb12486y8dsv@3n
-NEXT_PUBLIC_API_LOGIN=http://127.0.0.1:8000/api/login
+NEXT_AUTH_USER=https://laravel.smkn1rl.sch.id/api/user
+NEXT_PUBLIC_API_LOGIN=https://laravel.smkn1rl.sch.id/api/login
 NEXT_PUBLIC_API_REGISTER=http://127.0.0.1:8000/api/register
 
 # Storage
@@ -10,3 +11,6 @@ NEXT_PUBLIC_API_STORAGE=http://127.0.0.1:8000/storage
 NEXT_PUBLIC_API_NEWS=http://127.0.0.1:8000/api/news
 NEXT_PUBLIC_API_AGENDA=http://127.0.0.1:8000/api/agenda
 NEXT_PUBLIC_API_ANNOUNCEMENT=http://127.0.0.1:8000/api/announcement
+
+# production
+#https://laravel.smkn1rl.sch.id/
