--- a/.env
+++ b/.env
@@ -2,15 +2,15 @@
 NEXT_AUTH_SECRET=bhjvb12486y8dsv@3n
 NEXT_AUTH_USER=https://laravel.smkn1rl.sch.id/api/user
 NEXT_PUBLIC_API_LOGIN=https://laravel.smkn1rl.sch.id/api/login
-NEXT_PUBLIC_API_REGISTER=http://127.0.0.1:8000/api/register
+NEXT_PUBLIC_API_REGISTER=https://laravel.smkn1rl.sch.id/api/register
 
 # Storage
-NEXT_PUBLIC_API_STORAGE=http://127.0.0.1:8000/storage
+NEXT_PUBLIC_API_STORAGE=https://laravel.smkn1rl.sch.id/storage
 
 # Routes
-NEXT_PUBLIC_API_NEWS=http://127.0.0.1:8000/api/news
-NEXT_PUBLIC_API_AGENDA=http://127.0.0.1:8000/api/agenda
-NEXT_PUBLIC_API_ANNOUNCEMENT=http://127.0.0.1:8000/api/announcement
+NEXT_PUBLIC_API_NEWS=https://laravel.smkn1rl.sch.id/api/news
+NEXT_PUBLIC_API_AGENDA=https://laravel.smkn1rl.sch.id/api/agenda
+NEXT_PUBLIC_API_ANNOUNCEMENT=https://laravel.smkn1rl.sch.id/api/announcement
 
 # production
 #https://laravel.smkn1rl.sch.id/
