--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tiptap/extension-code-block-lowlight": "^2.9.1",
     "@tiptap/extension-color": "^2.9.1",
+    "@tiptap/extension-document": "^2.9.1",
     "@tiptap/extension-heading": "^2.9.1",
     "@tiptap/extension-horizontal-rule": "^2.9.1",
     "@tiptap/extension-image": "^2.9.1",
     "@tiptap/extension-link": "^2.9.1",
+    "@tiptap/extension-paragraph": "^2.9.1",
     "@tiptap/extension-placeholder": "^2.9.1",
+    "@tiptap/extension-text": "^2.9.1",
     "@tiptap/extension-text-style": "^2.9.1",
     "@tiptap/extension-typography": "^2.9.1",
     "@tiptap/extension-underline": "^2.9.1",
