--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-masonry-css": "^1.0.16",
     "react-medium-image-zoom": "^5.2.11",
+    "react-responsive-masonry": "^2.4.1",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
